exports[`ClogiiNavigator render 1`] = `
<FixBugScrollViewNavigator
  initialRoute={
    Object {
      "id": 3,
      "page": "main-tab",
    }
  }
  renderScene={[Function]} />
`;

exports[`ClogiiNavigator renderScene book 1`] = `
<View>
  <Apollo(Book)
    goToPlayer={[Function]}
    id={3}
    onBackPress={[Function]} />
</View>
`;

exports[`ClogiiNavigator renderScene main-tab 1`] = `
<View>
  <Connect(ClogiiTabView)
    goToBook={[Function]} />
</View>
`;

exports[`ClogiiNavigator renderScene player 1`] = `
<View>
  <Apollo(Player)
    id={1}
    onBackPress={[Function]} />
</View>
`;
